fixed css pages dropdown z-indexes

--- a/client/src/components/atoms/waffle/waffle.css
+++ b/client/src/components/atoms/waffle/waffle.css
@@ -45,7 +45,7 @@
     position: absolute;
     left: 10px;
     top: 40px;
-    z-index: 6;
+    z-index: 9;
     height: 0;
     width: 0;
 }
