--- a/client/src/components/organisms/page-dropdown/page-dropdown.css
+++ b/client/src/components/organisms/page-dropdown/page-dropdown.css
@@ -1,35 +1,36 @@
 .pagesDropdownContainer {
-    z-index: 5;
-    top: 68px;
-    right: 35px;
+  z-index: 5;
+  top: 68px;
+  right: 35px;
+  background: #fff;
 }
 
 .pagesDropdown {
-    z-index: 4;
-    width: 292px;
-    padding: 25px;
-    display: flex;
-    flex-wrap: wrap;
+  z-index: 4;
+  width: 292px;
+  padding: 25px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .initialContainer {
-    padding-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .iconStyle {
-    font-size: 50px;
+  font-size: 50px;
 }
 
 .square {
-    width: 80px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid white;
+  width: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
 }
 
 .square:hover {
-    border: 1px solid #e5e5e5;
-    border-radius: 2px;
+  border: 1px solid #e5e5e5;
+  border-radius: 2px;
 }
